static/base.css
/* ... */
@media (min-width: 480px) {
    .nav-item.branding {
        margin-left: 1rem;
    }

    .nav-item:last-child {
        margin-right: 1rem;
    }
}

a.nav-item.with-icon {
    border-bottom: none;
    display: flex;
}

a.nav-item.with-icon:hover {
    opacity: 0.8;
    cursor: pointer;
}

a.history {
    width: 24px;
    height: 24px;
}

a.history:hover {
    opacity: 0.8;
}

a.admin-panel {
    width: 24px;
    height: 24px;
}

a.admin-panel:hover {
    opacity: 0.8;
}


/* modals */
::backdrop {
    background-color: rgba(0, 0, 0, 40%);
}

dialog {
    background-color: var(--header);
    color: var(--foreground);
    border: none;
    border-radius: 0.5rem;
    padding: 0;
}

dialog > form {
    margin: auto;
    background-color: var(--header);
    border-radius: 0.5rem;
    min-width: 400px;
    max-width: 30rem;
}

dialog .form-container {
    padding: 1rem;
    color: var(--branding);
}

dialog > form > h1 {
    border-bottom: 1px solid var(--background);
    padding: 1.25rem 1.25rem 0.25rem;
    font-size: 1.5rem;
}

dialog > form > footer {
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-start;
    gap: 0.75rem;
    padding: 1rem;
    background-color: var(--background-lighter);
    margin-top: auto;
}

dialog > form > p {
    padding: 0 1.25rem;
}

dialog > form > p:last-of-type {
    margin-bottom: 0;
}

dialog > form > p ~ footer {
    margin-top: 0.75rem;
}

dialog > form > .alert {
    margin: 0 1rem;
}

/* close button */
button.close {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    -moz-appearance: none;
    -webkit-appearance: none;
    background-color: var(--close-button-bg);
    border: none;
    border-radius: 9999px;
    cursor: pointer;
    pointer-events: auto;
    display: inline-block;
    flex-grow: 0;
    flex-shrink: 0;
    font-size: 0;
    height: 20px;
    max-height: 20px;
    max-width: 20px;
    min-height: 20px;
    min-width: 20px;
    outline: 0;
    position: relative;
    vertical-align: top;
    width: 20px;
}

button.close::before, button.close::after {
    background-color: var(--close-button-text);
    content: "";
    display: block;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translateX(-50%) translateY(-50%) rotate(45deg);
    transform-origin: center center;
}

button.close::before {
    height: 2px;
    width: 50%;
}

button.close::after {
    height: 50%;
    width: 2px;
}

button.close:hover, button.close:focus {
    background-color: var(--close-button-bg-hover);
}

/* alerts */
.alert {
    position: relative;
    display: flex;
    align-items: center;
    border: 1px solid;
    border-radius: 0.375rem;
    padding: 0.5rem;
    margin-bottom: 1rem;
}

.alert > button.close {
    margin-left: auto;
}

.alert > p {
    margin-bottom: 0;
}

.alert.info {
    background-color: var(--info-bg);
    color: var(--info-text);
    border-color: var(--info-border);
}

.alert.error {
    background-color: var(--error-bg);
    color: var(--error-text);
    border-color: var(--error-border);
}

.alert.warning {
    background-color: var(--warning-bg);
    color: var(--warning-text);
    border-color: var(--warning-border);
}

.alert.success {
    background-color: var(--success-bg);
    color: var(--success-text);
    border-color: var(--success-border);
}

/* badges */

.badges {
    display: flex;
    margin-bottom: 0.5rem;
    gap: 0.5rem;
}

.badge {
    border: 1px solid var(--foreground);
    letter-spacing: 0;
    font-size: 12px;
    border-radius: 5px;
    padding: 2px 4px;
}

.badge.warning {
    background-color: var(--warning-bg);
    color: var(--warning-text);
    border-color: var(--warning-border);
}

.badge.info {
    background-color: var(--info-bg);
    color: var(--info-text);
    border-color: var(--info-border);
}

.badge.danger {
    background-color: var(--error-bg);
    color: var(--error-text);
    border-color: var(--error-border);
}

.badge.success {
    background-color: var(--success-bg);
    color: var(--success-text);
    border-color: var(--success-border);
}

.badge.branding {
    border-color: var(--box-border);
    color: var(--branding);
    background: var(--box);
}

/* spinner */

.spinner {
    animation: rotate 2s linear infinite;
    z-index: 2;
    width: 50px;
    height: 50px;
}

.spinner .path {
    stroke: var(--branding);
    stroke-linecap: round;
    animation: dash 1.5s ease-in-out infinite;
}

@keyframes rotate {
    100% {
        transform: rotate(360deg);
    }
}

@keyframes dash {
    0% {
        stroke-dasharray: 1, 150;
        stroke-dashoffset: 0;
    }
    50% {
        stroke-dasharray: 90, 150;
        stroke-dashoffset: -35;
    }
    100% {
        stroke-dasharray: 90, 150;
        stroke-dashoffset: -124;
    }
}

